# contact-form

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  configuration.yaml  docker-compose.yaml  fly.toml  rinja.toml  tailwind.config.js
.github/workflows/: general.yaml  rust.yml
.sqlx/: query-2e81ba2495072fce7958c2aff05381d0c94da2c455715d5f943c5ec3f3a91395.json  query-316fc6358d33bd500e92f7bb52902952dac419759be870d3b9cfdaf600dba052.json  query-3a5ca4bfaf5da3d33a928f11efe6fd7b7c2309945c4176b3496227a139bca28f.json  query-51c9c995452d3359e3da7e2f2ff8a6e68690f740a36d2a32ec7c40b08931ebdb.json  query-5779119e527a7ce1043687bc1a92e12214f718a8f2dfebc8a2c114abd1b41c39.json  query-72988cbd078a2ec2595ba74e9c3b8f020c0efe57851a14c4d08cc408e17a4da9.json  query-753c8ecfac0ea7d052e60cb582e3b3ebac5e50eb133152712ca18ab5d5e202f3.json  query-7b57e2776a245ba1602f638121550485e2219a6ccaaa62b5ec3e4683e33a3b5f.json  query-8d66ed4bb58eabadcc4e451b08ed992da30b1fcdc40d545b460d91c7cadf2df2.json  query-8e0b25acd667ddfb34fd1ccedbb516a96c830638cd5472ebd67f96dcc47c786f.json  query-92e09ca47ceefdf091b6574f411578ba26244286482ba6bc67cdd8d1ac09a5b1.json  query-9ab6536d2bf619381573b3bf13507d53b2e9cf50051e51c803e916f25b51abd2.json  query-a8444a2fdb21b4711c65c96c42902fb6fc0809b78f9c159c40fa7da0602e216c.json  query-a9c8424b1c4ad30c5a0f1aa278018f51f4a3a5eef84a63328c10fa6e00954dc0.json  query-accefa9934ef3b7b2a49b9d25d129305f351c11835dcdd437ca9fec1cc08723a.json  query-d4026311090ce3aea8ed1cdfb55eb0593471310365219c5a39d462ce20c57529.json
configuration/: base.yaml  local.yaml  production.yaml
etc/: litestream.yml
frontend/: astro.config.mjs  llms-full.txt  llms.txt  package-lock.json  package.json  starwind.config.json  tailwind.config.mjs  tsconfig.json
frontend/src/: consts.ts  content.config.ts
migrations/: 20240608171737_users.up.sql  20240608171743_sessions.up.sql  20240630165523_create_subscriptions_table.sql  20240706180218_create_subscriptions_table.sql  20240713123401_add_status_to_subscriptions.sql  20240713130331_make_status_not_null_in_subscriptions.sql  20240713131641_create_subscription_tokens_table.sql  20240816180856_create_subscriptions_table.sql  20240816180954_create_subscription_tokens_table.sql  20241004151736_create_users_table.sql  20250305200006_create_subscriptions_table.sql  20250319194022_make_status_not_null_in_subscriptions.sql  20250319204103_create_suscription_tokens_table.sql  20250519134334_create_users_table.sql  20250524152752_seed_user.sql
scripts/: init_db.sh  init_redis.sh  run.sh
scripts/a_place_for_test_dbs_to_spawn_in_it,supposed_to_be_empty_cuz_tests_terminate_after_success_execution/: delete_unsuccessful_tests.sh
src/: authenticaiton.rs  authentication.rs  configuration.rs  email_client.rs  lib.rs  main.rs  session_state.rs  startup.rs  utils.rs
src/routes/: blog.rs  (+10 more)
templates/: base.html  contact_form.html  index.html  login.html  succession.html
tests/: health_check.rs
(+56 files in other folders)
