[package]
name = "newzletter"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.44.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.97"
reqwest = "0.12.12"
serde = { version = "1.0.218", features = ["derive"] }
thiserror = "2.0.12"
config = "0.15.9"
sqlx = { version = "0.8.3", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "sqlite",
    # we don't need uuid feature in sqlx because sqlite doesn't support uuids
    #    "uuid",
    "chrono",
    "migrate",
] }
uuid = { version = "1.15.1", features = ["v4"] }
chrono = { version = "0.4.40", default-features = false, features = ["clock"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "registry",
    "env-filter",
] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tower-http = { version = "0.6.2", features = ["trace"] }
