[package]
name = "newzletter"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.97"
reqwest = "0.12.14"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
config = "0.15.11"
sqlx = { version = "0.8.3", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "sqlite",
    # we don't need uuid feature in sqlx because sqlite doesn't support uuids
    #    "uuid",
    # we don't alson need chrono for the same reasons
    # "chrono",
    "migrate",
] }
uuid = { version = "1.16.0", features = ["v4"] }
chrono = { version = "0.4.40", default-features = false, features = ["clock"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "registry",
    "env-filter",
] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tower-http = { version = "0.6.2", features = ["trace"] }
serde-aux = "4.6.0"
unicode-segmentation = "1.12.0"
validator = "0.20.0"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
fake = "4.0.0"
rand = "0.9.0"
claims = "0.8.0"
reqwest = { version = "0.12.14", features = ["json"] }
